Secondary Nav Jump fix css

--- a/wp-content/themes/liveRamp-Template/src/assets/scss/acf/_secondary_navigation_bar.scss
+++ b/wp-content/themes/liveRamp-Template/src/assets/scss/acf/_secondary_navigation_bar.scss
@@ -36,12 +36,67 @@
 
 #green-theme {
     .secondary_navigation_bar {
-        background-color: #0f3264; 
+        background-color: #0F3264;
     }
 }
 
 .secondary_navigation_bar {
     z-index: 1;
+    position: relative;
+    &.pad-section{
+        @media only screen and (max-width: 768px) {
+            padding: 0;
+        }
+    }
+
+    &.secondary-nav{
+        @media only screen and (max-width: 768px) {
+            overflow: hidden;
+            background-color: #333;
+            position: relative;
+        }
+        #secondary-nav-items {
+            @media only screen and (max-width: 768px) {
+                display: none;
+                padding-top: 15px;
+            }
+        }
+        @media only screen and (max-width: 768px) {
+            a{
+                color: white;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 17px;
+                display: block;
+            }
+            a.icon {
+                display: block;
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+        }
+    }
+    
+    #nav-show-hide{
+        display:none;
+        @media only screen and (max-width: 768px) {
+                display:block;
+        }
+    }
+
+    #selected-item{
+        display:none;
+        @media only screen and (max-width: 768px) {
+            display: block;
+            color: #ffffff;
+            margin: 0;
+            font-size: 17px;
+            padding: 15px 31px;
+            height:55px;
+            background-color: #09A8AB;
+        }
+    }
 
     ul.sec_nav_bar_wrapper {
         list-style-type: none;
@@ -52,11 +107,18 @@
         li {
             display: inline;
             padding: 0 16px;
+            @media only screen and (max-width: 768px) {
+                display: flex !important;
+            }
             &.active{
                 a.scroll_nav_item {
                     color: #f9e446;
                     border-bottom: 2px solid currentColor; 
                     display: inline;
+                    @media only screen and (max-width: 768px) {
+                        color: #ffffff !important;
+                        border-bottom: none !important;
+                    }
                 }
             }
             a.scroll_nav_item {
@@ -65,7 +127,10 @@
                 text-decoration: none;
                 display: inline-block;
                 padding: 10px 16px;
-
+                @media only screen and (max-width: 768px) {
+                    display: block!important;
+                    text-align: left !important;
+                }
                 &:hover {
                     color: #f9e446;
                     border-bottom: 2px solid currentColor; 
@@ -80,14 +145,17 @@
                 display: inline-block;
                 padding: 10px 16px;
                 background-color: #fff;
-
+                @media only screen and (max-width: 768px) {
+                    text-align: center !important;
+                    margin: 18px;
+                }    
                 &:hover {
                     color: #fa8d28;
                     //border-bottom: none;
                     background-color: #fff;
                 }
 
-                &:after, {
+                &:after {
                     background-image: url(../images/svg/arrow.svg);
                 }
             }
@@ -112,7 +180,7 @@
     }
 }
 
-.secondary_navigation_bar.secBarSticky {
+#secondaryNavBar.secondary_navigation_bar.secBarSticky {
     position: fixed;
     width: 100%;
 }
